fix: breadcrumb overflow on mobile resolution (#7372)
fix: breadcrumb overflow

--- a/apps/site/components/Common/Breadcrumbs/BreadcrumbItem/index.module.css
+++ b/apps/site/components/Common/Breadcrumbs/BreadcrumbItem/index.module.css
@@ -7,8 +7,8 @@
      text-sm
      font-medium;
 
-  &:last-child {
-    @apply w-full;
+  &:not(:last-child) {
+    @apply shrink-0;
   }
 
   a {
